@@ -1,3 +1,7 @@
+2004-09-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* site/about/faq.html (Han-Wen): update answers regarding latex.
+
 2004-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/download/windows.html: Do not blame the user.  Do not use
